OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/knative-eventing/security.istio.io/authorizationpolicies/allow-probe-kafka-channel-receiver.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-probe-kafka-channel-receiver","namespace":"knative-eventing"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"namespaces":["knative-eventing"],"principals":["cluster.local/ns/knative-eventing/sa/kafka-controller"]}}],"to":[{"operation":{"methods":["GET"]}}]}],"selector":{"matchLabels":{"app.kubernetes.io/component":"kafka-channel-receiver"}}}}
  creationTimestamp: "2025-01-09T14:46:21Z"
  generation: 1
  managedFields:
  - apiVersion: security.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:action: {}
        f:rules: {}
        f:selector:
          .: {}
          f:matchLabels:
            .: {}
            f:app.kubernetes.io/component: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:46:21Z"
  name: allow-probe-kafka-channel-receiver
  namespace: knative-eventing
  resourceVersion: "43651"
  uid: 71193584-565b-4381-927a-ccc89ec56563
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - knative-eventing
        principals:
        - cluster.local/ns/knative-eventing/sa/kafka-controller
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app.kubernetes.io/component: kafka-channel-receiver
